# shellshot

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  main.py
.cargo/: audit.toml
.github/: release.yml
.github/workflows/: ci.yml  codecov.yml  update-docs-images.yml
assets/tests/: base16_test.yaml  iterm_test.itermcolors
scripts/: display_ascii.py  regenerate_docs_images.py
src/: app.rs  constants.rs  image_generator.rs  image_renderer.rs  lib.rs  main.rs  os_command.rs  pty_executor.rs  screen_builder.rs  terminal_builder.rs  theme.rs  window_decoration.rs
src/image_renderer/: canvas.rs  render_size.rs  utils.rs
src/os_command/: linux.rs  windows.rs
src/pty_executor/: dimension.rs  utils.rs  writer.rs
src/screen_builder/: ansi.rs  helpers.rs  screen_size.rs
src/terminal_builder/: action.rs  constants.rs  progress_bar.rs  utils.rs
src/terminal_builder/action/: control.rs  csi.rs  operating_system_command.rs  print.rs
src/terminal_builder/action/csi/: cursor.rs  sgr.rs
src/theme/: base16.rs  iterm2.rs
src/window_decoration/: classic.rs  common.rs  communs.rs  no_decoration.rs  windows.rs
