[package]
name = "shellshot"
authors = ["lhenry-dev <lhenry.dev1@gmail.com>"]
version = "0.2.5"
edition = "2021"
rust-version = "1.85.1"
description = "Transform your command-line output into clean, shareable images with a single command."
license = "MIT/Apache-2.0"
keywords = ["terminal", "screenshot", "cli", "ansi", "command"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/lhenry-dev/shellshot"
documentation = "https://docs.rs/shellshot/latest/shellshot/"
homepage = "https://crates.io/crates/shellshot"

[lib]
name = "shellshot"
path = "src/lib.rs"

[[bin]]
name = "shellshot"
path = "src/main.rs"

[dependencies]
ab_glyph = "0.2.32"
arboard = "3.6.1"
bitflags = "2.10.0"
clap = { version = "4.5.51", features = ["derive"] }
image = "0.25.8"
imageproc = "0.25.0"
indicatif = "0.18.3"
num-traits = "0.2.19"
portable-pty = "0.9.0"
termwiz = "0.23.3"
thiserror = "2.0.17"
tiny-skia = "0.11.4"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3.23.0"
